Add `commit-msg` hook that requires referencing a GitHub issue number. #55

--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "lint:java-dependent-detection": "if which java >/dev/null 2>&1; then npm run lint:java-dependent; else true; fi",
     "lint:package-json": "gulp lint:package-json",
     "lint:yaml": "gulp lint:yaml",
-    "postinstall": "ln -fs ../../.pre-commit.sh .git/hooks/pre-commit"
+    "postinstall": ".hooks/init.sh"
   }
 }
